[package]
name = "demo_rust_project"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
tonic-reflection = "0.11"
tokio = {version = "1.0", features = ["full"]}
prost = "0.12"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
